# NeuroAdaptive

./: CMakeLists.txt  README.md
src/: activation_functions.cpp  activation_functions.h  data_handler.hpp  dropout.h  main.cpp  neural_network.ccp  neural_network.cpp  neural_network.h  neural_network.hpp  serialization.cpp  serialization.h
src/training/: training.cpp  training.h
